--- a/block-BHaaam/style.css
+++ b/block-BHaaam/style.css
@@ -1,39 +1,101 @@
-#tips{
-    background-color: lightslategray;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-#workout{
-        color: lightsteelblue;
-    font-size: 80px;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
-#body{
-    background-color: mediumturquoise;
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-#lifeofgym{
-    color: lime;
-    font-size: 70px;
+/* custom styles */
+img{
+    margin: 14px;
 }
-.model{
-    color: orchid;
-    
-}
+
+/* page-01 */
+
 #gym-life{
-  background-color: lightskyblue
+         background-color: rgb(208, 123, 208);
+         line-height: 19px;
+         margin-left: 15px;
+         color: white;
 }
-.maintain{
-    color: rgb(255, 1, 1);
-    font-size: larger;
+#workout{
+    margin-top: 20px;
+    margin-bottom: 30px;
+    color: rgb(255, 255, 255);
+    font-size: 60px;
+    text-align: center;
 }
-.days{
-     color:black;
-     font-size: 20px;
-}
-.start{
-    color: black;
-    font-size: 20px;
-}
-#gym-good{
+.p-01{
     font-size: 40px;
-    font-family:  Georgia, Times, 'Times New Roman', serif;
+    margin: 20px;
+}
+.p-02{
+    font-size: 40px;
+    margin: 20px;
+}
+.foot-01{
+    font-size: 25px;
+}
+
+/* page-02 */
+
+#tips{
+    background-color: rgb(157, 106, 230);
+    line-height: 19px;
+    margin-left: 15px;
+    color: white;
+}
+
+
+
+/* page-03 */
+
+#body{
+    background-color: rgb(79, 151, 189);
+    line-height: 19px;
+    margin-left: 15px;
+    color: white;
 }
 
